--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="blueTheme">#34C6EB</color>
+<color name="colorPrimary">#34C6EB</color>
+<color name="colorPrimaryDark">#19B7DF</color>
+<color name="colorAccent">#03DAC5</color>
+<color name="blueTheme">#34C6EB</color>
+<color name="upliftBlue">#34C6EB</color>
+<color name="white">#FBFEFF</color>
+<color name="grey">#404D50</color>
 </resources>
