formatted sign in/sign up screens

--- a/app/src/main/res/drawable/uplift_splash_screen.xml
+++ b/app/src/main/res/drawable/uplift_splash_screen.xml
@@ -5,7 +5,7 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/uplift_title">
+            android:src="@drawable/uplift_logo">
         </bitmap>
     </item>
 </layer-list>
