--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
 <color name="upliftBlue">#34C6EB</color>
 <color name="white">#FBFEFF</color>
 <color name="grey">#404D50</color>
+<color name="offWhite">#CDFBFEFF</color>
+
 </resources>
