implemented category selection

--- a/app/src/main/res/layout/activity_content_selection.xml
+++ b/app/src/main/res/layout/activity_content_selection.xml
@@ -13,14 +13,16 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <Button
+        android:id="@+id/btnFinish"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="@string/btnFinish"
         android:textColor="@color/white"
-        android:backgroundTint="@color/blueTheme"
+        android:background="@drawable/my_button"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
+        android:paddingHorizontal="10dp"
         android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24">
     </Button>
 </FrameLayout>
