--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 <color name="colorPrimary">#34C6EB</color>
 <color name="colorPrimaryDark">#19B7DF</color>
-<color name="colorAccent">#03DAC5</color>
+<color name="colorAccent">#34C6EB</color>
 <color name="blueTheme">#34C6EB</color>
 <color name="upliftBlue">#34C6EB</color>
 <color name="white">#FBFEFF</color>
