--- a/app/src/main/res/layout/notification_large.xml
+++ b/app/src/main/res/layout/notification_large.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/notification_icon_expanded"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/small_icon"
+            />
+
+        <TextView
+            android:id="@+id/notification_text_expanded"
+            style="@style/TextAppearance.Compat.Notification"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="5dp"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textFontWeight="600"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/notification_text_main_expanded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="10dp"
+        style="@style/TextAppearance.Compat.Notification" />
+
+    <ImageView
+        android:id="@+id/notification_image_expanded"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"/>
+
+
+</LinearLayout>
