--- a/app/src/main/res/layout/notification_small.xml
+++ b/app/src/main/res/layout/notification_small.xml
@@ -8,22 +8,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/notification_icon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/small_icon"
-            />
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/small_icon" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:id="@+id/notification_text"
+            style="@style/TextAppearance.Compat.Notification"
+            android:layout_width="311dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="5dp"
-            android:text="@string/app_name" />
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="@string/app_name"
+            android:textFontWeight="600" />
+
+        <ImageView
+            android:id="@+id/notification_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:gravity="end"
+            android:scaleType="centerCrop" />
     </LinearLayout>
 
 
