changed text of name entry, title of choose categories screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 <color name="blueTheme">#34C6EB</color>
 <color name="upliftBlue">#34C6EB</color>
 <color name="white">#FBFEFF</color>
-<color name="grey">#404D50</color>
+<color name="grey">#808383</color>
 <color name="offWhite">#CDFBFEFF</color>
 
 </resources>
