--- a/app/src/main/res/layout/activity_get_name.xml
+++ b/app/src/main/res/layout/activity_get_name.xml
@@ -29,7 +29,7 @@
         android:background="@android:color/transparent"
         android:layout_marginTop="110dp"
         android:textSize="20sp"
-        android:textColor="@color/upliftBlue"
+        android:textColor="@color/grey"
         android:typeface="serif"
         android:textStyle="bold"
         android:ellipsize="start"
