--- a/app/src/main/res/layout/notification_large.xml
+++ b/app/src/main/res/layout/notification_large.xml
@@ -43,8 +43,7 @@
         android:id="@+id/notification_image_expanded"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"/>
+        android:scaleType="fitXY"/>
 
 
 </LinearLayout>
