--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -9,4 +9,4 @@
     android:textStyle="bold"
     android:textAlignment="center"
     android:elevation="2dp"
-    android:textColor="@color/blueTheme" />
+    android:textColor="@color/grey" />
