Activity Opened Notification

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<color name="black">#000000</color>
 <color name="colorPrimary">#34C6EB</color>
 <color name="colorPrimaryDark">#19B7DF</color>
 <color name="colorAccent">#34C6EB</color>
