--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,35 @@
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/welcome"
+        android:textColor="@color/upliftBlue"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/upliftBlue"
-        android:textSize="25sp"
+        app:layout_constraintVertical_bias="0.236" />
+
+    <TextView
+        android:id="@+id/upliftMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:lineSpacingExtra="15dp"
+        android:paddingHorizontal="47dp"
+        android:text="@string/uplift_msg"
+        android:textAlignment="center"
+        android:textColor="#5C6060"
+        android:textSize="21sp"
         android:textStyle="bold"
-        android:typeface="serif"/>
+        android:typeface="serif"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome" />
 
     <Button
         android:id="@+id/btnLogOut"
