--- a/app/src/main/res/layout/activity_opened_notification.xml
+++ b/app/src/main/res/layout/activity_opened_notification.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/opened_notification_content"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
@@ -17,7 +17,8 @@
         android:textColor="@color/blueTheme"
         android:textSize="27sp"
         android:textStyle="bold"
-        android:typeface="serif" />
+        android:typeface="serif"
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/opened_notification_img"
