--- a/app/src/main/res/layout/activity_opened_notification.xml
+++ b/app/src/main/res/layout/activity_opened_notification.xml
@@ -23,7 +23,7 @@
     <ImageView
         android:id="@+id/opened_notification_img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
         android:visibility="gone"/>
