--- a/app/src/main/res/layout/activity_opened_notification.xml
+++ b/app/src/main/res/layout/activity_opened_notification.xml
@@ -9,13 +9,15 @@
     <TextView
         android:id="@+id/opened_notification_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:lineSpacingExtra="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="9dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:gravity="center"
         android:textColor="@color/blueTheme"
-        android:textSize="27sp"
+        android:textSize="26sp"
         android:textStyle="bold"
         android:typeface="serif"
         android:visibility="gone"/>
