Toggle ImageButton colour on click.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
 <color name="white">#FBFEFF</color>
 <color name="grey">#808383</color>
 <color name="offWhite">#CDFBFEFF</color>
-
+<color name="semi_slate">#8B9C9C9C</color>
 </resources>
