Update colours and style dialog.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
 <color name="offWhite">#CDFBFEFF</color>
 <color name="semi_slate">#8B9C9C9C</color>
 <color name="darkerWhite">#FBFEFF</color>
+<color name="semiBlue">#6A34C6EB</color>
 </resources>
